# pyakmaxsat

./: CMakeLists.txt  README.md  requirements.txt  setup.py
akmaxsat_1.1/: akmaxsat.hpp  clauses.hpp  cnf_formula.hpp  restore_list.hpp
pyakmaxsat/: __init__.py  core.py
src/: CMakeLists.txt  akmaxsat_solver.cpp  akmaxsat_solver.hpp  main.cpp
tests/: test_core.py
